-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 3.5.0
-
Windows 8, x64
svn version 1.9.0 r1692801 (TortoiseSVN)
-
cdf87335f432a10c9c917a8a7a70b7f6468e48ed
Regression of QTCREATORBUG-13728. Svn commit fails with
svn: E000022: Commit failed (details follow):
svn: E000022: Error normalizing log message to internal format
svn: E000022: Non-ASCII character (code 195) detected, and unable to convert to/from UTF-8
with commit message "äää". Command line svn, Tortoise svn GUI and Androidstudio svn integration don't behave like this.
For Gerrit Dashboard: QTCREATORBUG-14965 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
124405,2 | SVN: Fix encoding issues for commit message | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |