SVN: Fix encoding issues for commit message

According to

http://article.gmane.org/gmane.comp.version-control.subversion.user/118966

the encoding "UTF-8" should bypass any attempt of SVN to encode the
commit message, while "utf8" may or may not do so -- depending on iconv
settings.

Task-number: QTCREATORBUG-14965
Change-Id: Id7e8ed2c94c0b416bd02548fe31b55bc4256198a
Reviewed-by: Orgad Shaneh <orgads@gmail.com>