src/plugins/subversion/subversionclient.cpp
@@ -84,7 +84,7 @@ VcsCommand *SubversionClient::createCommitCmd(const QString &repositoryRoot,
             QStringList(extraOptions)
             << SubversionClient::addAuthenticationOptions(settings())
             << QLatin1String(Constants::NON_INTERACTIVE_OPTION)
-            << QLatin1String("--encoding") << QLatin1String("utf8")
+            << QLatin1String("--encoding") << QLatin1String("UTF-8")
             << QLatin1String("--file") << commitMessageFile;
 
     VcsCommand *cmd = createCommand(repositoryRoot);
